componentFactory basically working

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -1,5 +1,5 @@
-$color: #262828;
+@import '~pattern-library/core/pattern-library/headers';
 
 body {
-  color: $color;
+  color: text-color(normal);
 }
